package com.team1.animalproject.auth;

public class CookieConstant {

	public static final String HATALI_GIRIS = "HATALI_GIRIS";
	public static final int COOKIE_EXPIRY = 3600;
	public static final int SIFIR = 0;
	public static final int BIR = 1;

}
