package com.team1.animalproject.auth;

public class RoleConstants {

	public static final String ROLE_PREFIX = "ROLE_";
	public static final String USER = "USER";
	public static final String ACTUATOR = "ACTUATOR";
	public static final String ROLE_USER = ROLE_PREFIX + USER;
	public static final String ROLE_ACTUATOR = ROLE_PREFIX + ACTUATOR;

}
 