@startuml

title __SPRÝNGBOOT-PRÝMEFACES-HÝBERNATE's Class Diagram__\n

  namespace com.team1.animalproject {
    class com.team1.animalproject.SpringPrimeApplication {
    }
  }
  

  namespace com.team1.animalproject {
    class com.team1.animalproject.ViewScope {
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CommonUtils {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.Constants {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CookieConstant {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CookieHelper {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CustomAuthenticationFailureHandler {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CustomAuthenticationProvider {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CustomAuthenticationSuccessHandler {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.CustomLogoutSuccessHandler {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.RoleConstants {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace auth {
      class com.team1.animalproject.auth.URLConstants {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ConfigureJSF {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ServerCustomization {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ServletInitializer {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.WebMvcConfiguration {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace controller {
      class com.team1.animalproject.controller.Controller {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.BaseException {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      enum BaseExceptionType {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.BusinessRuleException {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.ViewException {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      class com.team1.animalproject.model.Animal {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      class com.team1.animalproject.model.Kullanici {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      class com.team1.animalproject.model.Shelter {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      class com.team1.animalproject.model.ShelterWorker {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      class com.team1.animalproject.model.Vet {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace model {
      namespace dto {
        class com.team1.animalproject.model.dto.KullaniciPrincipal {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace repository {
      interface com.team1.animalproject.repository.AnimalRepository {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace repository {
      interface com.team1.animalproject.repository.ShelterRepository {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace repository {
      interface com.team1.animalproject.repository.ShelterWorkerRepository {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace repository {
      interface com.team1.animalproject.repository.UserRepository {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace repository {
      interface com.team1.animalproject.repository.VetRepository {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.AnimalService {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      interface com.team1.animalproject.service.IBaseService {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.ShelterService {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.UserService {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.VetService {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.AnimalBean {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      abstract class com.team1.animalproject.view.BaseViewController {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.KullaniciSessionVerisi {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.Language {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.LoginBean {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.ShelterBean {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.UserBean {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      class com.team1.animalproject.view.VetBean {
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.ApplicationDisplaySettingsUtil {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        interface com.team1.animalproject.view.utils.IExceptionCustomMessageContainer {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.JSFUtil {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.JsfExceptionHandler {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.JsfExceptionHandlerFactory {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        enum ResourceBundleEnum {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.ResourceBundleFactory {
        }
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace view {
      namespace utils {
        class com.team1.animalproject.view.utils.RestException {
        }
      }
    }
  }
  

  com.team1.animalproject.ViewScope .up.|> org.springframework.beans.factory.config.Scope
  com.team1.animalproject.auth.CustomAuthenticationFailureHandler -up-|> org.springframework.security.web.authentication.ExceptionMappingAuthenticationFailureHandler
  com.team1.animalproject.auth.CustomAuthenticationProvider .up.|> org.springframework.security.authentication.AuthenticationProvider
  com.team1.animalproject.auth.CustomAuthenticationProvider o-- com.team1.animalproject.service.UserService : userService
  com.team1.animalproject.auth.CustomAuthenticationSuccessHandler -up-|> org.springframework.security.web.authentication.SavedRequestAwareAuthenticationSuccessHandler
  com.team1.animalproject.auth.CustomLogoutSuccessHandler .up.|> org.springframework.security.web.authentication.logout.LogoutSuccessHandler
  com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration o-- com.team1.animalproject.auth.CustomAuthenticationFailureHandler : customAuthenticationFailureHandler
  com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration o-- com.team1.animalproject.auth.CustomAuthenticationProvider : customAuthenticationProvider
  com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration o-- com.team1.animalproject.auth.CustomAuthenticationSuccessHandler : customAuthenticationSuccessHandler
  com.team1.animalproject.auth.Oauth2SingleSignOnConfiguration o-- com.team1.animalproject.auth.CustomLogoutSuccessHandler : customLogoutSuccessHandler
  com.team1.animalproject.configuration.ServerCustomization -up-|> org.springframework.boot.autoconfigure.web.ServerProperties
  com.team1.animalproject.configuration.ServletInitializer -up-|> org.springframework.boot.web.support.SpringBootServletInitializer
  com.team1.animalproject.configuration.WebMvcConfiguration -up-|> org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter
  com.team1.animalproject.exception.BaseException o-- com.team1.animalproject.exception.BaseExceptionType : type
  com.team1.animalproject.exception.BusinessRuleException o-- com.team1.animalproject.exception.BaseExceptionType : baseExceptionType
  com.team1.animalproject.exception.ViewException -up-|> com.team1.animalproject.exception.BaseException
  com.team1.animalproject.model.Animal .up.|> java.io.Serializable
  com.team1.animalproject.model.Kullanici .up.|> java.io.Serializable
  com.team1.animalproject.model.Shelter .up.|> java.io.Serializable
  com.team1.animalproject.model.ShelterWorker .up.|> java.io.Serializable
  com.team1.animalproject.model.Vet .up.|> java.io.Serializable
  com.team1.animalproject.model.dto.KullaniciPrincipal .up.|> java.io.Serializable
  com.team1.animalproject.service.AnimalService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.AnimalService o-- com.team1.animalproject.repository.AnimalRepository : animalRepository
  com.team1.animalproject.service.ShelterService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.ShelterService o-- com.team1.animalproject.repository.ShelterRepository : shelterRepository
  com.team1.animalproject.service.ShelterService o-- com.team1.animalproject.repository.ShelterWorkerRepository : shelterWorkerRepository
  com.team1.animalproject.service.UserService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.UserService o-- com.team1.animalproject.repository.UserRepository : userRepository
  com.team1.animalproject.service.VetService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.VetService o-- com.team1.animalproject.repository.VetRepository : vetRepository
  com.team1.animalproject.view.AnimalBean .up.|> java.io.Serializable
  com.team1.animalproject.view.AnimalBean -up-|> com.team1.animalproject.view.BaseViewController
  com.team1.animalproject.view.AnimalBean o-- com.team1.animalproject.model.Animal : animal
  com.team1.animalproject.view.AnimalBean o-- com.team1.animalproject.service.AnimalService : animalService
  com.team1.animalproject.view.BaseViewController .up.|> java.io.Serializable
  com.team1.animalproject.view.KullaniciSessionVerisi .up.|> java.io.Serializable
  com.team1.animalproject.view.KullaniciSessionVerisi o-- com.team1.animalproject.model.Kullanici : kullanici
  com.team1.animalproject.view.KullaniciSessionVerisi o-- com.team1.animalproject.service.UserService : userService
  com.team1.animalproject.view.LoginBean .up.|> java.io.Serializable
  com.team1.animalproject.view.LoginBean -up-|> com.team1.animalproject.view.BaseViewController
  com.team1.animalproject.view.ShelterBean .up.|> java.io.Serializable
  com.team1.animalproject.view.ShelterBean -up-|> com.team1.animalproject.view.BaseViewController
  com.team1.animalproject.view.ShelterBean o-- com.team1.animalproject.model.Shelter : shelter
  com.team1.animalproject.view.ShelterBean o-- com.team1.animalproject.service.ShelterService : shelterService
  com.team1.animalproject.view.UserBean .up.|> java.io.Serializable
  com.team1.animalproject.view.UserBean -up-|> com.team1.animalproject.view.BaseViewController
  com.team1.animalproject.view.UserBean o-- com.team1.animalproject.model.Kullanici : kullanici
  com.team1.animalproject.view.UserBean o-- com.team1.animalproject.service.UserService : userService
  com.team1.animalproject.view.VetBean .up.|> java.io.Serializable
  com.team1.animalproject.view.VetBean -up-|> com.team1.animalproject.view.BaseViewController
  com.team1.animalproject.view.VetBean o-- com.team1.animalproject.model.Vet : vet
  com.team1.animalproject.view.VetBean o-- com.team1.animalproject.service.VetService : vetService
  com.team1.animalproject.view.utils.ApplicationDisplaySettingsUtil .up.|> java.io.Serializable
  com.team1.animalproject.view.utils.JSFUtil .up.|> java.io.Serializable
  com.team1.animalproject.view.utils.JsfExceptionHandler -up-|> javax.faces.context.ExceptionHandlerWrapper
  com.team1.animalproject.view.utils.JsfExceptionHandlerFactory -up-|> javax.faces.context.ExceptionHandlerFactory
  com.team1.animalproject.view.utils.RestException -up-|> com.team1.animalproject.exception.BaseException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
